<resources>

    <string name="app_name">Zapeat</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_zapeat">Zapeat</string>
    <string name="title_activity_monitoring">Zapeat</string>
    <string name="title_activity_main">Zapeat</string>
    <string name="title_activity_configuracao">Zapeat</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_browser">Zapeat</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="autenticar">Entrar</string>
    <string name="title_activity_list">Zapeat - Promoções</string>
    <string name="title_activity_promocao_list">Zapeat</string>
    <string name="web">Ver +</string>
    <string name="sair">Sair</string>
    <string name="filtrar_distancia">Filtrar distância Máxima (m)</string>
    <string name="atualizar">Atualizado às \n 12:12:12 12:12</string>
    <string name="filtrar">Filtrar</string>
    <string name="promocoes">Promoções do dia</string>
    <string name="title_activity_map_view">Zapeat - Mapa</string>
    <string name="mapa">Ir para o mapa</string>
    <string name="title_activity_categoria">Zapeat</string>
    <string name="title_activity_check_in">Check-In</string>
    <string name="app_id">288597137908601</string>
    
</resources>