<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shapebutton" >

    <requestFocus />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btAutenticar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/senha"
        android:layout_alignRight="@+id/senha"
        android:layout_below="@+id/senha"
        android:layout_marginTop="32dp"
        android:background="@drawable/shapebutton"
        android:text="@string/autenticar" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/senha"
        android:layout_alignLeft="@+id/senha"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/login" />

</RelativeLayout>
