<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#C0C0C0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btAtualizarPromocao"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:background="@drawable/shapebutton"
            android:drawableLeft="@drawable/refresh"
            android:paddingLeft="15dp"
            android:text="@string/atualizar"
            android:textSize="11dp" />

        <Button
            android:id="@+id/btWeb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@drawable/shapebutton"
            android:drawableLeft="@drawable/www"
            android:paddingLeft="15dp"
            android:text="@string/web"
            android:textSize="11dp" />

        <Button
            android:id="@+id/btSairList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@drawable/shapebutton"
            android:drawableLeft="@drawable/logout"
            android:paddingLeft="15dp"
            android:text="@string/sair"
            android:textSize="11dp" />
    </LinearLayout>

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/list__promocoes"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:divider="#ECECEC"
                        android:dividerHeight="3sp"
                        android:footerDividersEnabled="true"
                        android:headerDividersEnabled="true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ListView
                        android:id="@+id/list_promocoes_proximas"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:divider="#ECECEC"
                        android:dividerHeight="3sp"
                        android:footerDividersEnabled="true"
                        android:headerDividersEnabled="true" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>